[package]
name = "tide-tracing-middleware"
version = "0.1.0"
edition = "2018"
authors = ["Yuchen Zhang <zhangyuchen0411@163.com"]
repository = "https://github.com/chen-zyc/tide-tracing-middleware"
license = "Apache-2.0"
description = "A middleware for tide using the tracing crate for logging."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16", default-features = false }
tracing = "0.1"
futures = "0.3"
tracing-futures = "0.2"
pin-project = "1.0"
regex = "1.5"
time = {version = "0.2", default-features = false, features = ["std"]}

[dev-dependencies]
tide = {version = "0.16", default-features = false, features = ["h1-server"]}
async-std = {version = "1.10", features = ["attributes"]}
tracing-subscriber = "0.2.0"
uuid = {version = "0.8", features = ["v4"]}